[gd_scene load_steps=10 format=3]

[ext_resource type="PackedScene" path="res://NPCs/NPC.tscn" id="1"]
[ext_resource type="Texture2D" uid="uid://c2g4qx3xy87xm" path="res://Bird/Flight1.png" id="2"]
[ext_resource type="Texture2D" uid="uid://dbxgp2fdt6x5q" path="res://Bird/Flight2.png" id="3"]
[ext_resource type="Texture2D" uid="uid://dhm6thn353yk1" path="res://Bird/Flight3.png" id="4"]
[ext_resource type="Texture2D" uid="uid://be1efxxi275b5" path="res://Bird/Flight4.png" id="5"]
[ext_resource type="Texture2D" uid="uid://dmik336vpckg8" path="res://Bird/Flight6.png" id="6"]
[ext_resource type="Texture2D" uid="uid://rvgjminp7y3m" path="res://Bird/Flight5.png" id="7"]
[ext_resource type="Script" path="res://NPCs/Bird.gd" id="8"]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 3.0
} ]

[node name="CharacterBody2D" instance=ExtResource( 1 )]
script = ExtResource( 8 )

[node name="BirdSprite" type="AnimatedSprite2D" parent="." index="1"]
position = Vector2( 10.1472, 4.32343 )
scale = Vector2( 2.12668, 1.47936 )
frames = SubResource( 1 )
animation = "idle"
frame = 3
playing = true
flip_h = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="." index="2"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
